# lumi-aitta-demo-suite

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_benchmark_suite.sh  run_demo_suite.sh
benchmarks/: benchmark_openai.py  benchmark_reasoning.py  common.py  run_matrix.py  summarize_matrix.py  summarize_results.py
benchmarks/prompts/: extraction.txt  qa.txt  reasoning.txt  summarization.txt
clients/: __init__.py  aitta_direct.py  aitta_discovery.py  base.py  factory.py
config/: aitta.env.example  models.yaml
data/benchmark_inputs/: multiturn_prompts.txt
data/benchmark_inputs/reasoning/: code_diagnosis.txt  grounded_qa.txt  technical_explanation.txt
data/benchmark_inputs/summaries/: record_01.txt  record_02.txt
data/docs/: aitta_overview.txt  client_memory.txt
data/extraction_samples/: customer_email.txt  project_update.txt
demos/: batch_summarization_demo.py  common.py  extraction_demo.py  multiturn_demo.py  rag_demo.py  reasoning_candidates_demo.py  smoke_test.py
env/: lumi-env.sh  requirements.txt
reports/: generate_summary.py
reports/example_outputs/: README.md  aitta_capability_report.md
scripts/: install_venv.sh
self_hosted/: notes.md  run_vllm_demo.sh  run_vllm_demo_puhti.sh
utils/: __init__.py  benchmarking.py  chat.py  cli.py  config.py  env.py  files.py  rag.py
