[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumi-aitta-demo-suite"
version = "0.1.0"
description = "Aitta OpenAI-compatible benchmarks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["clients*", "utils*", "benchmarks*"]
